--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "equals",
+  "name": "@segment/equals",
   "version": "1.1.0",
   "description": "Check if two values are deeply equivalent",
   "dependencies": {
-    "jkroso-type": "1"
+    "jkroso-type": "1.1.0"
   },
   "devDependencies": {
     "serve": "jkroso/serve",
